<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">i2pd</string>

    <string name="action_stop">Stop</string>
    <string name="action_graceful_stop">Graceful Stop</string>
    <string name="action_cancel_graceful_stop">Cancel Graceful Stop</string>
    <string name="action_reload_tunnels_config">Reload tunnels</string>
    <string name="action_start_webview">Open Web Console</string>

    <string name="graceful_stop_is_already_in_progress">Graceful stop is already in progress</string>
    <string name="graceful_stop_is_in_progress">Graceful stop is in progress</string>
    <string name="gracefulShutdownInProgress">Graceful shutdown in progress</string>

    <string name="already_stopped">Already stopped</string>
    <string name="uninitialized">Application initializing</string>
    <string name="starting">Application starting</string>
    <string name="jniLibraryLoaded">Loaded JNI libraries</string>
    <string name="startedOkay">Application Started</string>
    <string name="startFailed">Start failed</string>
    <string name="stopped">Application stopped</string>
    <string name="remaining">remaining</string>
    <string name="ok">OK</string>

    <string name="title_activity_i2_pdperms_asker_prompt">Prompt</string>
    <string name="permDenied">SD card write permission denied, you need to allow this to continue</string>
    <string name="permRequired">SD card write access is required to write the keys and other files to the I2PD folder on SD card.</string>
    <string name="retryPermRequest">Retry requesting the SD card write permissions</string>

    <string name="menu_item_battery_optimizations_str">Battery Optimizations</string>
    <string name="battery_optimizations_enabled">Battery optimizations enabled</string>
    <string name="battery_optimizations_enabled_explained">Your Android is doing some heavy battery optimizations on I2PD that might lead to daemon closing with no other reason.\nIt is recommended to allow disabling those battery optimizations.</string>
    <string name="battery_optimizations_enabled_dialog">Your Android is doing some heavy battery optimizations on I2PD that might lead to daemon closing with no other reason.\n\nYou will now be asked to allow to disable those.</string>
    <string name="continue_str">Continue</string>
    <string name="device_does_not_support_disabling_battery_optimizations">Your Android version does not support opting out of battery optimizations</string>
    <string name="os_version_does_not_support_battery_optimizations_show_os_dialog_api">Your Android OS version does not support showing the dialog for battery optimizations for applications.</string>

    <string name="shutdown_canceled">Planned shutdown canceled</string>

    <string name="tunnels_reloading">Reloading tunnels config...</string>
</resources>
