<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".I2PDActivity">

    <group android:id="@+id/group_various">
        <item
            android:id="@+id/action_battery_otimizations"
            android:title="@string/menu_item_battery_optimizations_str" />
    </group>

    <group android:id="@+id/group_i2pd_control">
        <item
            android:id="@+id/action_start_webview"
            android:orderInCategory="96"
            android:title="@string/action_start_webview" />
        <item
            android:id="@+id/action_reload_tunnels_config"
            android:orderInCategory="97"
            android:title="@string/action_reload_tunnels_config" />
        <item
            android:id="@+id/action_graceful_stop"
            android:orderInCategory="98"
            android:title="@string/action_graceful_stop" />
        <item
            android:id="@+id/action_stop"
            android:orderInCategory="99"
            android:title="@string/action_stop" />
    </group>
</menu>
